# mejiro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  request.http  rustfmt.toml
.github/workflows/: release.yml
apps/desktop/: astro.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  constants.ts  events.ts  globals.css  index.tsx  invokes.ts  types.ts  utils.ts
apps/desktop/src/components/: App.tsx  BookmarkTreeEditable.tsx  BookmarksPage.tsx  Header.tsx  MainLayout.tsx  PageLoadingBar.tsx  Resizer.tsx  RootChildrenSelect.tsx  SettingsPage.tsx  Sidebar.tsx  SidebarResizer.tsx  ToolBar.tsx
apps/desktop/src/libs/: observe-mouse-drag.ts
apps/desktop/src/pages/: index.astro
apps/desktop/src/stores/: bookmarks.ts  dialogs.ts  dragging.ts  pages.ts  settings.ts  url.ts  window.ts
apps/web/: package.json  tsconfig.json
apps/web/src/: App.tsx  constants.ts  globals.css  invokes.ts  types.ts
apps/web/src/components/: AddressBar.tsx  BookmarkTree.tsx  BookmarkTreeEditable.tsx  Favicon.tsx  Header.tsx  RootChildrenSelect.tsx  ToolBar.tsx
apps/web/src/layouts/: Layout.astro
apps/web/src/stores/: bookmarks.ts  dialog.ts  dialogs.ts  settings.ts  theme.ts  url.ts  window.ts
crates/app/: Cargo.toml  tauri.conf.json
crates/app-settings/: build.rs
crates/app-settings/permissions/schemas/: schema.json
crates/app-settings/src/: commands.rs  lib.rs  models.rs
crates/app/capabilities/: app.json  external.json
crates/app/icons/: icon.icns
crates/app/inject/: eval.js  init.js
crates/app/js/: external.js  get-title.js  mouse-gesture.js  url-observer.js
crates/app/permissions/: custom.json
crates/app/src/: app_handle_ext.rs  commands.rs  constants.rs  error.rs  events.rs  lib.rs  settings.rs  window.rs
crates/app/src/commands/: bookmarks.rs  external.rs  settings.rs  webviews.rs
crates/bookmark/src/: bookmarks.rs  data.rs  error.rs  lib.rs  serialize.rs
crates/bookmark/src/bookmarks/: collection.rs  io.rs  json.rs  manipulation.rs  nested.rs  tree.rs
crates/bookmark/tests/: integration_test.rs
crates/bookmarks/: Cargo.toml
crates/bookmarks/permissions/: default.toml
crates/bookmarks/permissions/autogenerated/: reference.md
crates/bookmarks/src/: commands.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: bookmarks.rs  data.rs  error.rs  lib.rs  serialize.rs  tree.rs  utils.rs
crates/core/src/bookmarks/: collection.rs  json.rs  manipulation.rs  nested.rs  tree.rs
crates/core/tests/: integration_test.rs  tests.rs
crates/core/tests/common/: mod.rs
crates/dendron-bookmark/: Cargo.toml
crates/dendron-bookmark/src/: error.rs  file.rs  id.rs  lib.rs  macros.rs  models.rs  tree.rs
crates/dendron-bookmark/tests/assets/: tree.json
crates/favicon-fetcher/: Cargo.toml
crates/favicon-fetcher/src/: lib.rs
crates/favicon-server/: Cargo.toml
crates/favicon-server/src/: db.rs  error.rs  handler.rs  lib.rs  main.rs  response.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/fs/tests/assets/: sample.user.js
crates/js-injection/: Cargo.toml  build.rs
crates/js-injection/permissions/: default.toml
crates/js-injection/src/: commands.rs  lib.rs
crates/meta-parser/: Cargo.toml
crates/meta-parser/src/: lib.rs
crates/parus-common/: Cargo.toml
crates/parus-common/src/: constants.rs  error.rs  lib.rs  utils.rs
crates/plugin-bookmarks/: Cargo.toml  build.rs
crates/plugin-bookmarks/permissions/: default.toml
crates/plugin-bookmarks/src/: commands.rs  lib.rs
crates/plugin-js-injection/: Cargo.toml  build.rs
crates/plugin-js-injection/permissions/: default.toml
crates/plugin-js-injection/permissions/autogenerated/: reference.md
crates/plugin-js-injection/permissions/autogenerated/commands/: history_back.toml  history_forward.toml  send_page_url.toml
crates/plugin-js-injection/permissions/schemas/: schema.json
crates/plugin-js-injection/src/: commands.rs  lib.rs
crates/plugin-js-injection/src/js/: history-back.js  history-forward.js  mouse-gesture.js  title-observer.js
crates/plugin-user-scripts/: README.md
crates/plugin-user-scripts/src/: lib.rs  models.rs
crates/plugin-window-geometry/src/: commands.rs  lib.rs
crates/tauri-plugin-app/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-app-settings/: Cargo.toml
crates/tauri-plugin-app-settings/permissions/: default.toml
crates/tauri-plugin-app-settings/permissions/autogenerated/: reference.md
crates/tauri-plugin-app-settings/src/: commands.rs  desktop.rs  lib.rs
crates/tauri-plugin-app/permissions/autogenerated/: reference.md
crates/tauri-plugin-app/permissions/schemas/: schema.json
crates/tauri-plugin-app/src/: commands.rs  constants.rs  desktop.rs  error.rs  file.rs  lib.rs  mobile.rs  models.rs  window_geometry.rs
crates/tauri-plugin-user-settings/: build.rs
crates/tauri-plugin-user-settings/permissions/: default.toml
crates/tauri-plugin-user-settings/src/: commands.rs  models.rs
crates/tauri-plugin-window-geometry/: Cargo.toml
crates/tauri-plugin-window-geometry/permissions/: default.toml
crates/tauri-plugin-window-geometry/src/: commands.rs  desktop.rs  lib.rs  models.rs
crates/user-scripts/: Cargo.toml  README.md
crates/user-scripts/src/: error.rs  lib.rs  models.rs  utils.rs
crates/user-scripts/tests/assets/styles/: styles.user.js
crates/user-settings/: Cargo.toml
crates/user-settings/permissions/: default.toml
crates/user-settings/src/: lib.rs
crates/window-geometry/: build.rs
crates/window-geometry/permissions/: default.toml
crates/window-geometry/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_handle_ext.rs  commands.rs  constants.rs  error.rs  events.rs  lib.rs  settings.rs  updater.rs  utils.rs  window.rs
src-tauri/src/commands/: bookmarks.rs  injects.rs  settings.rs  webviews.rs
(+60 files in other folders)
