# schema issue on EvenBetterToml https://github.com/tamasfe/taplo/issues/755
#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/d8d4ddd2dfa7aee57c15dad08fb95ab038007a20/src/schemas/json/cargo.json

[workspace]
resolver = "3"
members = [
  "crates/app",
  "crates/core",
  "crates/meta-parser",
  "crates/favicon-fetcher",
  "crates/favicon-server",
  "crates/parus-common",
  "crates/tauri-plugin-app-settings",
  "crates/tauri-plugin-user-settings",
  "crates/tauri-plugin-window-geometry",
]

[workspace.package]
version = "0.29.0"
authors = ["andots"]
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.97"
log = "0.4.26"
reqwest = "0.12.12"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
thiserror = "2.0.12"
url = "2.5.4"
tokio = "1.44.0"

# tauri
tauri = "2.3.1"
tauri-build = "2.0.6"
tauri-plugin = "2.0.5"

# internal
parus-common = { path = "./crates/parus-common" }
mejiro-core = { path = "./crates/core" }
meta-parser = { path = "./crates/meta-parser" }
favicon-fetcher = { path = "./crates/favicon-fetcher" }
favicon-server = { path = "./crates/favicon-server" }
tauri-plugin-app-settings = { path = "./crates/tauri-plugin-app-settings" }
tauri-plugin-user-settings = { path = "./crates/tauri-plugin-user-settings" }
tauri-plugin-window-geometry = { path = "./crates/tauri-plugin-window-geometry" }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false
opt-level = "s"
strip = true
