# schema issue on EvenBetterToml https://github.com/tamasfe/taplo/issues/755
#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/d8d4ddd2dfa7aee57c15dad08fb95ab038007a20/src/schemas/json/cargo.json

[workspace]
resolver = "3"
members = [
  "crates/app",
  "crates/bookmark",
  "crates/common",
  "crates/favicon-server",
  "crates/fs",
  "crates/meta-parser",
  "crates/plugin-app-settings",
  "crates/plugin-bookmarks",
  "crates/plugin-js-injection",
  "crates/plugin-user-scripts",
  "crates/plugin-user-settings",
  "crates/plugin-window-geometry",
]

[workspace.package]
version = "0.32.2"
authors = ["andots"]
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.97"
log = "0.4.26"
once_cell = "1.21.1"
regex = "1.11.1"
reqwest = "0.12.14"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
thiserror = "2.0.12"
tokio = "1.44.1"
url = "2.5.4"

# tauri
tauri = "2.3.1"
tauri-build = "2.0.6"
tauri-plugin = "2.0.5"

# internal
parus-bookmark = { path = "./crates/bookmark" }
parus-common = { path = "./crates/common" }
parus-fs = { path = "./crates/fs" }
favicon-server = { path = "./crates/favicon-server" }
meta-parser = { path = "./crates/meta-parser" }
# internal plugins
tauri-plugin-app-settings = { path = "./crates/plugin-app-settings" }
tauri-plugin-bookmarks = { path = "./crates/plugin-bookmarks" }
tauri-plugin-js-injection = { path = "./crates/plugin-js-injection" }
tauri-plugin-user-scripts = { path = "./crates/plugin-user-scripts" }
tauri-plugin-user-settings = { path = "./crates/plugin-user-settings" }
tauri-plugin-window-geometry = { path = "./crates/plugin-window-geometry" }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false
opt-level = "s"
strip = true
