[package]
name = "mejiro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["test", "unstable", "devtools"] }

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

# internal
mejiro-core.workspace = true
favicon-server.workspace = true

# tauri plugins
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.3"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.5.0"
tauri-plugin-single-instance = "2.2.2"
