[package]
name = "mejiro-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# for tree data structure
indextree = { version = "4.7.3", features = ["deser"] }

thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = "3.16.0"
anyhow = "1.0.95"
