[package]
name = "dendron-bookmark"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dendron = { version = "0.1.5" }
derive-new = "0.7.0"
ulid = { version = "1.1.4", features = ["serde"] }
url = "2.5.4"

thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
tempfile = "3.16.0"
anyhow = "1.0.95"
