[package]
name = "favicon-fetcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tokio-macros = "2.5.0"
