[package]
name = "favicon-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.8.1" }
http-serde = "2.1.1"
redb = "2.4.0"
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }

# base64 = "0.22.1"
# urlencoding = "2.1.3"

[dev-dependencies]
