[package]
name = "parus-fs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glob = "0.3.2"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"

[dev-dependencies]
anyhow = { workspace = true }
