[package]
name = "parus-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true, features = ["derive"] }
log = { workspace = true }
tauri = { workspace = true }
