[package]
name = "tauri-plugin-user-scripts"
links = "tauri-plugin-user-scripts"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

parus-common.workspace = true

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
