[package]
name = "tauri-plugin-user-scripts"
links = "tauri-plugin-user-scripts"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
notify = "8.0.0"
notify-debouncer-full = "0.5.0"

parus-common.workspace = true
parus-fs.workspace = true

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
